--- a/bom/application/pom.xml
+++ b/bom/application/pom.xml
@@ -1257,6 +1257,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-kafka-client-ui</artifactId>
+                <version>${project.version}</version>
+            </dependency>            
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-kafka-streams</artifactId>
                 <version>${project.version}</version>
             </dependency>
