Kafka dev ui as a dev console route
minor fixes for UI

--- a/extensions/kafka-client/runtime/pom.xml
+++ b/extensions/kafka-client/runtime/pom.xml
@@ -61,7 +61,7 @@
 
         <dependency>
             <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-vertx-http</artifactId>
+            <artifactId>quarkus-vertx-http-dev-console-runtime-spi</artifactId>
         </dependency>
 
         <dependency>
