Keep test IT for HibernateOrmStateStore. Separate PUs for fruit and people entities

--- a/integration-tests/reactive-messaging-hibernate-orm/src/main/resources/application.properties
+++ b/integration-tests/reactive-messaging-hibernate-orm/src/main/resources/application.properties
@@ -19,10 +19,13 @@ mp.messaging.outgoing.people-out.acks=all
 mp.messaging.incoming.people-in.topic=people
 mp.messaging.incoming.people-in.commit-strategy=checkpoint
 mp.messaging.incoming.people-in.checkpoint.state-store=quarkus-hibernate-orm
-mp.messaging.incoming.people-in.checkpoint.state-type=io.quarkus.it.kafka.PeopleState
+mp.messaging.incoming.people-in.checkpoint.state-type=io.quarkus.it.kafka.people.PeopleState
 mp.messaging.incoming.people-in.checkpoint.quarkus-hibernate-orm.persistence-unit=people
 mp.messaging.incoming.people-in.auto.commit.interval.ms=500
 mp.messaging.incoming.people-in.group.id=people-checkpoint
 
+quarkus.datasource.devservices.enabled=true
+quarkus.hibernate-orm.packages=io.quarkus.it.kafka.fruit
 quarkus.datasource."people".devservices.enabled=true
 quarkus.hibernate-orm."people".datasource=people
+quarkus.hibernate-orm."people".packages=io.quarkus.it.kafka.people
