Kafka native container dev services

--- a/extensions/kafka-client/deployment/pom.xml
+++ b/extensions/kafka-client/deployment/pom.xml
@@ -63,6 +63,10 @@
             <artifactId>strimzi-test-container</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.ozangunalp</groupId>
+            <artifactId>kafka-native-test-container</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-junit4-mock</artifactId>
         </dependency>
