--- a/integration-tests/kafka-avro/src/main/resources/application.properties
+++ b/integration-tests/kafka-avro/src/main/resources/application.properties
@@ -6,5 +6,6 @@ quarkus.log.category.\"org.apache.zookeeper\".level=WARN
 quarkus.kafka.health.enabled=true
 
 # using QuarkusTestResourceLifecycleManager in this test
-quarkus.kafka.devservices.enabled=false
+quarkus.kafka.devservices.enabled=true
+quarkus.kafka.devservices.provider=kafka-native
 quarkus.apicurio-registry.devservices.enabled=false
