--- a/integration-tests/kafka-sasl-elytron/src/test/resources/kafkaServer.properties
+++ b/integration-tests/kafka-sasl-elytron/src/test/resources/kafkaServer.properties
@@ -19,6 +19,8 @@
 
 # The id of the broker. This must be set to a unique integer for each broker.
 broker.id=0
+process.roles=broker,controller
+controller.quorum.voters=0@localhost:9093
 
 ############################# Socket Server Settings #############################
 
@@ -29,9 +31,9 @@ broker.id=0
 #   EXAMPLE:
 #     listeners = PLAINTEXT://your.host.name:9092
 #listeners=PLAINTEXT://:9092
-listeners=SASL_PLAINTEXT://:9092
+listeners=SASL_PLAINTEXT://:9092,PLAINTEXT://:9093
 #advertised.listeners=SASL_PLAINTEXT://localhost:9092
-
+controller.listener.names=PLAINTEXT
 
 
 # Hostname and port the broker will advertise to producers and consumers. If not set,
@@ -42,7 +44,7 @@ listeners=SASL_PLAINTEXT://:9092
 
 # Maps listener names to security protocols, the default is for them to be the same. See the config documentation for more details
 #listener.security.protocol.map=PLAINTEXT:PLAINTEXT,SSL:SSL,SASL_PLAINTEXT:SASL_PLAINTEXT,SASL_SSL:SASL_SSL
-listener.security.protocol.map=SASL_PLAINTEXT:SASL_PLAINTEXT
+listener.security.protocol.map=SASL_PLAINTEXT:SASL_PLAINTEXT,PLAINTEXT:PLAINTEXT
 
 
 # The number of threads that the server uses for receiving requests from the network and sending responses to the network
@@ -80,6 +82,7 @@ listener.name.sasl_plaintext.gssapi.sasl.jaas.config=com.sun.security.auth.modul
   useKeyTab=true \
   storeKey=true \
   debug=true \
+  refreshKrb5Config=true \
   serviceName="kafka" \
   keyTab="/opt/kafka/config/kafkabroker.keytab" \
   principal="kafka/localhost@EXAMPLE.COM";
@@ -156,7 +159,7 @@ log.retention.check.interval.ms=300000
 # server. e.g. "127.0.0.1:3000,127.0.0.1:3001,127.0.0.1:3002".
 # You can also append an optional chroot string to the urls to specify the
 # root directory for all kafka znodes.
-zookeeper.connect=localhost:2181
+#zookeeper.connect=localhost:2181
 
 # Timeout in ms for connecting to zookeeper
 zookeeper.connection.timeout.ms=45000
