--- a/bom/application/pom.xml
+++ b/bom/application/pom.xml
@@ -144,6 +144,7 @@
         <lz4.version>1.8.0</lz4.version> <!-- dependency of the kafka-clients that could be overridden by other imported BOMs in the platform -->
         <snappy.version>1.1.8.4</snappy.version>
         <strimzi-test-container.version>0.100.0</strimzi-test-container.version>
+        <kafka-native-test-container.version>0.1.3</kafka-native-test-container.version>
         <!-- Scala is used by Kafka so we need to choose a compatible version -->
         <scala.version>2.13.10</scala.version>
         <aws-lambda-java.version>1.2.2</aws-lambda-java.version>
@@ -4069,6 +4070,11 @@
                         <artifactId>junit</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>com.ozangunalp</groupId>
+                <artifactId>kafka-native-test-container</artifactId>
+                <version>${kafka-native-test-container.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.nimbusds</groupId>
