--- a/integration-tests/kafka-oauth-keycloak/src/test/resources/kafkaServer.properties
+++ b/integration-tests/kafka-oauth-keycloak/src/test/resources/kafkaServer.properties
@@ -19,7 +19,8 @@
 
 # The id of the broker. This must be set to a unique integer for each broker.
 broker.id=1
-
+process.roles=broker,controller
+controller.quorum.voters=1@localhost:9093
 ############################# Socket Server Settings #############################
 
 # The address the socket server listens on. It will get the value returned from
@@ -29,8 +30,9 @@ broker.id=1
 #   EXAMPLE:
 #     listeners = PLAINTEXT://your.host.name:9092
 #listeners=PLAINTEXT://:9092
-listeners=JWT://:9092
+listeners=JWT://:9092,PLAINTEXT://:9093
 #advertised.listeners=SASL_PLAINTEXT://localhost:9092
+controller.listener.names=PLAINTEXT
 
 
 
@@ -42,7 +44,7 @@ listeners=JWT://:9092
 
 # Maps listener names to security protocols, the default is for them to be the same. See the config documentation for more details
 #listener.security.protocol.map=PLAINTEXT:PLAINTEXT,SSL:SSL,SASL_PLAINTEXT:SASL_PLAINTEXT,SASL_SSL:SASL_SSL
-listener.security.protocol.map=JWT:SASL_PLAINTEXT
+listener.security.protocol.map=JWT:SASL_PLAINTEXT,PLAINTEXT:PLAINTEXT
 
 
 # The number of threads that the server uses for receiving requests from the network and sending responses to the network
@@ -159,7 +161,7 @@ log.retention.check.interval.ms=300000
 # server. e.g. "127.0.0.1:3000,127.0.0.1:3001,127.0.0.1:3002".
 # You can also append an optional chroot string to the urls to specify the
 # root directory for all kafka znodes.
-zookeeper.connect=localhost:2181
+#zookeeper.connect=localhost:2181
 
 # Timeout in ms for connecting to zookeeper
 zookeeper.connection.timeout.ms=45000
