--- a/integration-tests/kafka-sasl-elytron/pom.xml
+++ b/integration-tests/kafka-sasl-elytron/pom.xml
@@ -63,6 +63,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>com.ozangunalp</groupId>
+            <artifactId>kafka-native-test-container</artifactId>
+            <scope>test</scope>
+            <version>0.1.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
             <scope>test</scope>
