--- a/integration-tests/kafka-ssl/src/test/resources/server.properties
+++ b/integration-tests/kafka-ssl/src/test/resources/server.properties
@@ -19,7 +19,8 @@
 
 # The id of the broker. This must be set to a unique integer for each broker.
 broker.id=0
-
+process.roles=broker,controller
+controller.quorum.voters=0@localhost:9093
 ############################# Socket Server Settings #############################
 
 # The address the socket server listens on. It will get the value returned from
@@ -28,20 +29,18 @@ broker.id=0
 #     listeners = listener_name://host_name:port
 #   EXAMPLE:
 #     listeners = PLAINTEXT://your.host.name:9092
-#listeners=PLAINTEXT://:9092
-listeners=SSL://:9092
-
-
+listeners=SSL://:9092,PLAINTEXT://:9093
+controller.listener.names=PLAINTEXT
 
 # Hostname and port the broker will advertise to producers and consumers. If not set,
 # it uses the value for "listeners" if configured.  Otherwise, it will use the value
 # returned from java.net.InetAddress.getCanonicalHostName().
 #advertised.listeners=PLAINTEXT://your.host.name:9092
-advertised.listeners=SSL://:9092
+#advertised.listeners=SSL://:9092
 
 # Maps listener names to security protocols, the default is for them to be the same. See the config documentation for more details
 #listener.security.protocol.map=PLAINTEXT:PLAINTEXT,SSL:SSL,SASL_PLAINTEXT:SASL_PLAINTEXT,SASL_SSL:SASL_SSL
-listener.security.protocol.map=SSL:SSL
+listener.security.protocol.map=SSL:SSL,PLAINTEXT:PLAINTEXT
 
 # The number of threads that the server uses for receiving requests from the network and sending responses to the network
 num.network.threads=3
@@ -138,7 +137,7 @@ log.retention.check.interval.ms=300000
 # server. e.g. "127.0.0.1:3000,127.0.0.1:3001,127.0.0.1:3002".
 # You can also append an optional chroot string to the urls to specify the
 # root directory for all kafka znodes.
-zookeeper.connect=localhost:2181
+#zookeeper.connect=localhost:2181
 
 # Timeout in ms for connecting to zookeeper
 zookeeper.connection.timeout.ms=45000
