--- a/integration-tests/kafka/src/main/resources/application.properties
+++ b/integration-tests/kafka/src/main/resources/application.properties
@@ -6,4 +6,5 @@ quarkus.log.category.\"org.apache.zookeeper\".level=WARN
 quarkus.kafka.health.enabled=true
 
 # using QuarkusTestResourceLifecycleManager in this test
-quarkus.kafka.devservices.enabled=false
+quarkus.kafka.devservices.enabled=true
+quarkus.kafka.devservices.provider=kafka-native
